--- a/Rock_Scissor_Paper_200728.ipynb
+++ b/Rock_Scissor_Paper_200728.ipynb
@@ -225,66 +225,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential_9\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_2 (Conv2D)            (None, 26, 26, 15)        420       \n",
+      "conv2d_18 (Conv2D)           (None, 26, 26, 15)        420       \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 13, 13, 15)        0         \n",
+      "max_pooling2d_18 (MaxPooling (None, 13, 13, 15)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 11, 11, 25)        3400      \n",
+      "conv2d_19 (Conv2D)           (None, 11, 11, 25)        3400      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_3 (MaxPooling2 (None, 5, 5, 25)          0         \n",
+      "max_pooling2d_19 (MaxPooling (None, 5, 5, 25)          0         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 625)               0         \n",
+      "flatten_9 (Flatten)          (None, 625)               0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 25)                15650     \n",
+      "dense_18 (Dense)             (None, 25)                15650     \n",
       "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 10)                260       \n",
+      "dropout_4 (Dropout)          (None, 25)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_19 (Dense)             (None, 10)                260       \n",
       "=================================================================\n",
       "Total params: 19,730\n",
       "Trainable params: 19,730\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
-      "Epoch 1/10\n",
-      "173/173 [==============================] - 0s 1ms/step - loss: 1.1507 - accuracy: 0.4187\n",
-      "Epoch 2/10\n",
-      "173/173 [==============================] - 0s 1ms/step - loss: 0.7005 - accuracy: 0.7147\n",
-      "Epoch 3/10\n",
-      "173/173 [==============================] - 0s 1ms/step - loss: 0.5494 - accuracy: 0.7804\n",
-      "Epoch 4/10\n",
-      "173/173 [==============================] - 0s 2ms/step - loss: 0.4629 - accuracy: 0.8214\n",
-      "Epoch 5/10\n",
-      "173/173 [==============================] - 0s 2ms/step - loss: 0.3994 - accuracy: 0.8493\n",
-      "Epoch 6/10\n",
-      "173/173 [==============================] - 0s 1ms/step - loss: 0.3504 - accuracy: 0.8723\n",
-      "Epoch 7/10\n",
-      "173/173 [==============================] - 0s 1ms/step - loss: 0.3005 - accuracy: 0.8955\n",
-      "Epoch 8/10\n",
-      "173/173 [==============================] - 0s 2ms/step - loss: 0.2585 - accuracy: 0.9083\n",
-      "Epoch 9/10\n",
-      "173/173 [==============================] - 0s 1ms/step - loss: 0.2169 - accuracy: 0.9221\n",
-      "Epoch 10/10\n",
-      "173/173 [==============================] - 0s 1ms/step - loss: 0.1880 - accuracy: 0.9362\n",
-      "44/44 - 0s - loss: 0.1826 - accuracy: 0.9275\n",
-      "test_loss: 0.18255461752414703 \n",
-      "test_accuracy: 0.9275362491607666\n"
+      "Epoch 1/12\n",
+      "173/173 [==============================] - 0s 1ms/step - loss: 1.2115 - accuracy: 0.3723\n",
+      "Epoch 2/12\n",
+      "173/173 [==============================] - 0s 1ms/step - loss: 0.9288 - accuracy: 0.5928\n",
+      "Epoch 3/12\n",
+      "173/173 [==============================] - 0s 1ms/step - loss: 0.6481 - accuracy: 0.7437\n",
+      "Epoch 4/12\n",
+      "173/173 [==============================] - 0s 1ms/step - loss: 0.5158 - accuracy: 0.8107\n",
+      "Epoch 5/12\n",
+      "173/173 [==============================] - 0s 1ms/step - loss: 0.3984 - accuracy: 0.8518\n",
+      "Epoch 6/12\n",
+      "173/173 [==============================] - 0s 1ms/step - loss: 0.3420 - accuracy: 0.8710\n",
+      "Epoch 7/12\n",
+      "173/173 [==============================] - 0s 1ms/step - loss: 0.2676 - accuracy: 0.9022\n",
+      "Epoch 8/12\n",
+      "173/173 [==============================] - 0s 2ms/step - loss: 0.2331 - accuracy: 0.9147\n",
+      "Epoch 9/12\n",
+      "173/173 [==============================] - 0s 1ms/step - loss: 0.2004 - accuracy: 0.9277\n",
+      "Epoch 10/12\n",
+      "173/173 [==============================] - 0s 1ms/step - loss: 0.1596 - accuracy: 0.9446\n",
+      "Epoch 11/12\n",
+      "173/173 [==============================] - 0s 1ms/step - loss: 0.1410 - accuracy: 0.9498\n",
+      "Epoch 12/12\n",
+      "173/173 [==============================] - 0s 1ms/step - loss: 0.1110 - accuracy: 0.9659\n",
+      "44/44 - 0s - loss: 0.1189 - accuracy: 0.9623\n",
+      "test_loss: 0.11893410980701447 \n",
+      "test_accuracy: 0.9623188376426697\n"
      ]
     }
    ],
    "source": [
+    "# 딥러닝 네트워크 설계하기\n",
     "n_channel_1=15\n",
     "n_channel_2=25\n",
     "n_dense=25\n",
-    "n_train_epoch=10\n",
+    "n_train_epoch=12\n",
     "\n",
     "model=keras.models.Sequential()\n",
     "model.add(keras.layers.Conv2D(n_channel_1, (3,3), activation='relu', input_shape=(28,28,3)))\n",
@@ -293,9 +300,10 @@
     "model.add(keras.layers.MaxPooling2D((2,2)))\n",
     "model.add(keras.layers.Flatten())\n",
     "model.add(keras.layers.Dense(n_dense, activation='relu'))\n",
-    "#model.add(keras.layers.Dropout(rate=0.4))\n",
+    "model.add(keras.layers.Dropout(rate=0.02))\n",
     "model.add(keras.layers.Dense(10, activation='softmax'))\n",
     "\n",
+    "# 만든 모델 확인\n",
     "model.summary()\n",
     "model.compile(optimizer='adam',\n",
     "             loss='sparse_categorical_crossentropy',\n",
@@ -304,6 +312,7 @@
     "# 모델 훈련\n",
     "model.fit(x_train, y_train, epochs=n_train_epoch)\n",
     "\n",
+    "# 모델 평가하기\n",
     "test_loss, test_accuracy = model.evaluate(x_test,y_test, verbose=2)\n",
     "print(\"test_loss: {} \".format(test_loss))\n",
     "print(\"test_accuracy: {}\".format(test_accuracy))"
