Rock_Scissor_Paper_200728.ipynb

--- a/Rock_Scissor_Paper_200728.ipynb
+++ b/Rock_Scissor_Paper_200728.ipynb
@@ -615,6 +615,22 @@
     "    plt.imshow(x_test[n], cmap=plt.cm.binary)\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "1) 1명의 사진(총300장)으로 트레이닝하고 테스트(총300장) 했을 때 - accuracy 0.33정도\n",
+    "* 이 경우 사진을 찍는 배경이 한명과 다른한명이 다르기 때문에 제대로 학습을 못한 것으로 판단.\n",
+    "* 다양한 배경과 다양한 포즈가 더 많이 필요할 것 같았음.\n",
+    "\n",
+    "2) 조원 5명의 사진을 모두 모음 -> 0.2의 비율로 test/train set을 분리하여 테스트 - accuracy 0.96\n",
+    "* 이 경우 정확도는 높아졌지만, 문제를 한번 풀어보고 같은 출제자 문제를 또 풀어보는 것이므로 정확도 높히 나온 것으로 판단.(오버피팅 가능성)\n",
+    "* 예를 들어 train set은 1조의 사진, test set은 2조의 사진으로 구성해서 테스트 해보는 것도 좋을 것 같음.\n",
+    "* 지금은 5명이라는 소수의 사람들이 찍은 사진으로 이루어졌지만 더 다양한 사람들이 찍은 사진을 모아서 테스트 해도 좋을 것 같음."
+   ]
   }
  ],
  "metadata": {
