Image_classification_200730.ipynb

--- a/Image_classification_200730.ipynb
+++ b/Image_classification_200730.ipynb
@@ -1007,7 +1007,7 @@
    "source": [
     "## Conclusion\n",
     "1. Accuracy만 보면 Logistic Regression이 97.4%로 가장 높음.\n",
-    "2. 의료데이터는 특히 False Negative가 치명적이기 때문에 False Negative가 제일 적인 것을 주시해야 함.   \n",
+    "2. 의료데이터는 특히 False Negative가 치명적이기 때문에 False Negative가 제일 적은 것을 주시해야 함.   \n",
     "=> 로지스틱이 False Negative도 가장 적은 편이고, 정확도도 높으므로 로지스틱 모델 선정"
    ]
   }
