Scrapping_news_articles_200804.ipynb

--- a/Scraping_news_articles_200804.ipynb
+++ b/Scraping_news_articles_200804.ipynb
@@ -619,6 +619,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 텍스트를 입력하면 자동으로 TF-IDF vector로 바꾸어주는 전처리 함수\n",
+    "def tfidf_vectorizer(data):\n",
+    "    data_counts = count_vect.transform(data)\n",
+    "    data_tfidf = tfidf_transformer.transform(data_counts)\n",
+    "    return data_tfidf"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [],
@@ -640,19 +653,6 @@
    "metadata": {},
    "source": [
     "### 나이브 베이즈 분류기"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 텍스트를 입력하면 자동으로 TF-IDF vector로 바꾸어주는 전처리 함수\n",
-    "def tfidf_vectorizer(data):\n",
-    "    data_counts = count_vect.transform(data)\n",
-    "    data_tfidf = tfidf_transformer.transform(data_counts)\n",
-    "    return data_tfidf"
    ]
   },
   {
@@ -819,7 +819,9 @@
     "1. Kkma는 너무 오래걸려서 효율성이 떨어지기 때문에 사용하지 않는 것이 좋을 것 같다.\n",
     "2. f1-score는 Komoran이 가장 높았다.\n",
     "3. 데이터 전처리에 더 공을 들여야 할 것 같다 -> 아쉽게도 시간이 부족.   \n",
-    "특히, 단어 frequency나 불용어를 더 자세하게 보아야 할 것 같다. 단어들을 하나씩 보면 이상하게 끊긴 것들이 은근 많음."
+    "특히, 단어 frequency나 불용어를 더 자세하게 보아야 할 것 같다. 단어들을 하나씩 보면 이상하게 끊긴 것들이 은근 많음.   \n",
+    "\n",
+    "- 개선책: f1-score는 다들 비슷하므로 가장 속도가 빠른 Mecab을 이용하고, 데이터 전처리 단계에 더 공을 들일 것"
    ]
   }
  ],
