--- a/regression_200811.ipynb
+++ b/regression_200811.ipynb
@@ -713,6 +713,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Conclusion\n",
+    "- loss가 생각보다 잘 줄어 들지 않음.\n",
+    "- scatter plot을 보니 딱히 선형관계가 있는 것처럼 보이지 않음.\n",
+    "- 예측을 위해 다른 모델을 쓰는 것이 좋을 것 같음."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 월요일 오후 세 시 자전거 타는 사람 수"
    ]
   },
@@ -1367,6 +1377,19 @@
     "plt.scatter(X_test['humidity'],predictions, label = \"true\")\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "- 변수를 탐색하는 것이 매우 중요할 것 같음. \n",
+    "- 맨 처음 변수 이해 없이 거의 다 넣었더니 RMSE가 이상하게 거의 0에 수렴함.\n",
+    "- 알고보니 casual+registered=counts 여서, casual과 registered를 제외시킴\n",
+    "- 그리고 holiday는 너무 치중되어 있는 데이터였음. (넣는 것과 빼는 것 별 차이 없어서 그냥 넣어둠)\n",
+    "- temp, humidity 시각화 그래프를 보면 선형 관계가 있는지 잘 모르겠음."
    ]
   }
  ],
