--- a/practice/collecting_data_200819.ipynb
+++ b/practice/collecting_data_200819.ipynb
@@ -1181,7 +1181,7 @@
    "source": [
     "# 날씨 API\n",
     "import requests\n",
-    "myapi = \"af44a23b3fa31260fd92b236a65bffa3\"\n",
+    "myapi = \"\"\n",
     "\n",
     "#lat: 위도, #lon:경도\n",
     "def makeurl(lat, lng):\n",
