--- a/exploration/e16_cifar10_generator/e16_generating_cifar10.ipynb
+++ b/exploration/e16_cifar10_generator/e16_generating_cifar10.ipynb
@@ -891,7 +891,7 @@
    "source": [
     "import imageio\n",
     "import glob\n",
-    "anim_file = os.getenv('HOME')+'/aiffel/dcgan_newimage/cifar10/fashion_mnist_dcgan.gif'\n",
+    "anim_file = os.getenv('HOME')+'/aiffel/dcgan_newimage/cifar10/cifar10_dcgan.gif'\n",
     "\n",
     "with imageio.get_writer(anim_file, mode='I') as writer:\n",
     "    filenames = glob.glob('{}/aiffel/dcgan_newimage/cifar10/generated_samples/sample*.png'.format(os.getenv('HOME')))\n",
@@ -909,6 +909,13 @@
     "    writer.append_data(image)\n",
     "\n",
     "!ls -l ~/aiffel/dcgan_newimage/cifar10/cifar10.gif"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[cifar10 학습과정 gif](https://github.com/yooonjiwon/Aiffel/blob/master/exploration/e16_cifar10_generator/cifar10_dcgan.gif)"
    ]
   }
  ],
