--- a/going_deeper/Class_Activation_Map만들기.ipynb
+++ b/going_deeper/Class_Activation_Map만들기.ipynb
@@ -1202,6 +1202,7 @@
     }
    ],
    "source": [
+    "# ResNet50\n",
     "get_iou(pred_bbox, item['bbox'])"
    ]
   },
@@ -1222,6 +1223,7 @@
     }
    ],
    "source": [
+    "# Xception\n",
     "get_iou(pred_bbox, item['bbox'])"
    ]
   },
@@ -1242,6 +1244,7 @@
     }
    ],
    "source": [
+    "# VGG 16\n",
     "get_iou(pred_bbox, item['bbox'])"
    ]
   },
@@ -1252,8 +1255,12 @@
    },
    "source": [
     "- ResNet50(lr0.01, epoch 15): 0.6205900277900362\n",
-    "- Xception(lr0.01), epoch 15: 0.7624584795556665\n",
-    "- Xception(lr0.001, epoch 20): "
+    "- Xception(lr0.01, epoch 15): 0.7624584795556665\n",
+    "- VGG16(lr0.01, epoch 20): 0.8407686664053657\n",
+    "\n",
+    "# Conclusion\n",
+    "- Testing diverse model would be great. \n",
+    "- Tuning lr to 0.001 was not helpful to improve the IOU"
    ]
   }
  ],
